# service_meta

./: README.md  docker-compose.yml
meta/: Dockerfile  manage.py  pyproject.toml
meta/api/: serializers.py  services.py  urls.py  views.py
meta/service_meta/: asgi.py  config.py  settings.py  urls.py  wsgi.py
nginx/: nginx.conf
